More changes to transactions
